# __docs__/swagger-output.json
@@ -1,14 +1,15 @@
 {
   "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "title": "My API",
     "description": "Auto-generated Swagger docs for internal use",
     "version": "1.0.0"
   },
-  "host": "brokers-production.up.railway.app",
-  "basePath": "/",
-  "schemes": [
-    "https"
+  "servers": [
+    {
+      "url": "https://brokers-production.up.railway.app/"
+    }
   ],
   "paths": {
     "/read": {
@@ -77,7 +78,40 @@
             "description": "Service Unavailable"
           }
         },
-        "requestBody": {}
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "eventType": {
+                    "type": "string",
+                    "example": "click"
+                  },
+                  "eventTarget": {
+                    "type": "string",
+                    "example": "more info button"
+                  },
+                  "eventDocument": {
+                    "type": "string",
+                    "example": "home page"
+                  },
+                  "agent": {
+                    "type": "string",
+                    "example": "agent1234"
+                  }
+                },
+                "required": [
+                  "eventType",
+                  "eventTarget",
+                  "eventDocument",
+                  "agent"
+                ]
+              }
+            }
+          }
+        }
       }
     },
     "/delete/{col}/{identifier}": {
@@ -107,5 +141,8 @@
         }
       }
     }
+  },
+  "components": {
+    "securitySchemes": {}
   }
 }
